2008-09-17  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclInt.h:     Correct the TclGetLongFromObj,
	TclGetIntFromObj, and TclGetIntForIndexM macros so that they
	retrieve the internalRep.longValue field instead of casting the
	internalRep.otherValuePtr field to type long.

2008-09-17  Miguel Sofer  <msofer@users.sf.net>

	* library/init.tcl: export min and max commands from the mathfunc
	namespace [Bug 2116053]

2008-09-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclListObj.c (Tcl_ListObjGetElements): Make this list->dict
	transformation - encountered when using [foreach] with dicts - not as
	expensive as it was before. Spotted by Kieran Elby and reported on
	tcl-core.

2008-09-07  Miguel Sofer  <msofer@users.sf.net>

	* doc/namespace.n: fix [Bug 2098441]

2008-08-28  Don Porter	<dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump version number to 8.5.5b1 to distinguish
	* library/init.tcl:	CVS development snapshots from the 8.5.4 and
	* unix/configure.in:	8.5.5 releases.
	* unix/tcl.spec:
	* win/configure.in:
	* tools/tcl.wse.in:
	* README

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-08-22  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c (TclReToGlob):	Added missing set of the
	*exactPtr value to really fix [Bug 2065115].  Also avoid possible
	DString overflow.
	* tests/regexpComp.test:	Correct duplicate test names.

2008-08-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/regexp.test, tests/regexpComp.test: correct re2glob ***=
	* generic/tclUtil.c (TclReToGlob):          translation from exact
	to anywhere-in-string match. [Bug 2065115]

2008-08-20  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclTest.c (TestconcatobjCmd):	fix use of internal-only
						TclInvalidateStringRep macro.
						[Bug 2057479]

2008-08-17  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclTest.c (TestconcatobjCmd):
	* generic/tclUtil.c (Tcl_ConcatObj): 
	* tests/util.test (util-4.7): 